<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
        
    
    <item android:id="@+id/menu_write_tweet"
          android:icon="@drawable/ic_twimight_compose"
          android:title="@string/write_tweet"                
		  android:showAsAction="ifRoom" />
    
    <item android:id="@+id/menu_search"
          android:icon="@drawable/ic_twimight_search"
          android:title="@string/search"          
		  android:showAsAction="ifRoom"
		   />
    
    <item android:id="@+id/menu_my_profile"
          android:icon="@drawable/ic_menu_friendslist"          
          android:title="@string/profile" />  
    
    <item android:id="@+id/menu_messages"
          android:icon="@drawable/ic_menu_start_conversation"          
          android:title="@string/messages"          />
    	
	<item android:id="@+id/menu_settings"
          android:icon="@drawable/ic_menu_preferences"          
          android:title="@string/settings"        />
	
	<item android:id="@+id/menu_cache"
          android:icon="@drawable/ic_menu_mark"         
          android:title="@string/cache_html" />
	
		<item android:id="@+id/menu_cache_clear"
          android:icon="@drawable/ic_menu_mark"         
          android:title="@string/clear_cache_html" />
	    
	<item android:id="@+id/menu_logout"
          android:icon="@drawable/ic_menu_close_clear_cancel"          
          android:title="@string/logout" />	
          
	<item android:id="@+id/menu_about"
          android:icon="@drawable/ic_menu_info_details"          
          android:title="@string/about" />		
          
	<item android:id="@+id/menu_feedback"
          android:icon="@drawable/ic_menu_edit"          
          android:title="@string/feedback" />		
		
		
		

</menu>