<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification -->
<RelativeLayout 
	android:layout_width="fill_parent" 
	android:layout_height="fill_parent" 
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/showAboutRoot">

	<ImageView android:id="@+id/showAboutLayout"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:src="@drawable/mightybird_starglow" android:orientation="vertical"
		android:layout_gravity="center" android:scaleType="centerCrop" />

<LinearLayout
	    android:id="@+id/showAboutLogo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="bottom"
	    android:orientation="vertical"
	    android:background="@drawable/about_background"
	    android:layout_alignParentBottom="true"
	    android:layout_margin="10dp">

		<TextView android:id="@+id/textTwimight"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:textSize="30dp"
			android:text="Twimight" android:textColor="@color/black" />
		<TextView android:id="@+id/textMighty" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:textSize="14dp" android:text="@string/mighty" android:textColor="@color/black"/>

		<TextView android:id="@+id/textCopy" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/copyright" android:layout_marginTop="9dp" android:textColor="@color/black"/>
		
		<TextView android:id="@+id/textAuthors" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center"
			android:text="@string/author" android:layout_marginTop="9dp" android:textColor="@color/black"/>

		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:orientation="vertical" android:layout_marginTop="15dp">

			<LinearLayout android:id="@+id/linearLayout2"
				android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="10dp">

				<TextView android:id="@+id/textView3"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/version" android:layout_marginRight="20dp" android:textColor="@color/black"/>

				<TextView android:id="@+id/showAboutVersion"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:text="@string/placeholder" android:textColor="@color/black" />

			</LinearLayout>

		</LinearLayout>

		<LinearLayout android:id="@+id/linearLayout3"
			android:layout_width="match_parent" android:layout_height="wrap_content">

			<TextView
			    android:id="@+id/textView5"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_marginRight="20dp"
			    android:text="@string/keys"
			    android:textColor="@color/black" />

			<TextView android:id="@+id/showAboutKeys"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/placeholder" android:layout_marginRight="20dp" android:textColor="@color/black"/>

			<Button
			    android:id="@+id/showAboutRevoke"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:minHeight="30dp"
			    android:minWidth="50dp"
			    android:paddingLeft="2dp"
			    android:paddingRight="2dp"
			    android:text="@string/revoke" />

		</LinearLayout>

		<LinearLayout android:id="@+id/linearLayout4"
			android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="2dp">

			<TextView android:id="@+id/textView7" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/update"
				android:padding="0dp" android:layout_marginRight="20dp" android:textColor="@color/black"/>

			<TextView android:id="@+id/showAboutLastUpdate"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:text="@string/placeholder" android:layout_marginRight="20dp" android:textColor="@color/black"/>

			<Button
			    android:id="@+id/showAboutUpdate"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:minHeight="30dp"
			    android:minWidth="50dp"
			    android:paddingLeft="2dp"
			    android:paddingRight="2dp"
			    android:text="@string/update_button"
			    android:visibility="visible" />

		</LinearLayout>

	</LinearLayout>
</RelativeLayout>