<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2011 ETH Zurich. All rights reserved. This program and 
	the accompanying materials are made available under the terms of the GNU 
	Public License v2.0 which accompanies this distribution, and is available 
	at http://www.gnu.org/licenses/old-licenses/gpl-2.0.html Contributors: Paolo 
	Carta - Implementation Theus Hossmann - Implementation Dominik Schatzmann 
	- Message specification -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/showNewDMRoot"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@color/twimightBackgroundLight"
    android:orientation="vertical"
    android:padding="5dp" >

	<LinearLayout
	    android:id="@+id/linearLayout1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="left"
	    android:layout_marginBottom="5dp" >

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/to"
			android:textColor="@color/text" android:textAppearance="?android:attr/textAppearanceMedium" />

		<EditText android:id="@+id/dmRecepient" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_gravity="left"
			android:gravity="left" android:inputType="text|number" />

	</LinearLayout>

	<EditText
	    android:id="@+id/dmText"
	    android:layout_width="fill_parent"
	    android:layout_height="100dp"
	    android:layout_gravity="top"
	    android:layout_marginTop="5dp"
	    android:gravity="top"
	    android:inputType="textMultiLine" />

	<LinearLayout android:id="@+id/linearLayout2"
		android:layout_width="fill_parent" android:layout_height="wrap_content">

		<TextView
		    android:id="@+id/dm_characters"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="5dp"
		    android:gravity="right"
		    android:text="@string/tweet_length"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="@color/twimightTextDark" />

	</LinearLayout>

	<LinearLayout
	    android:id="@+id/linearLayout3"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center" >

		<Button
		    android:id="@+id/dm_send"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:layout_marginRight="20dp"
		    android:paddingLeft="5dp"
		    android:text="@string/send" />

		<Button
		    android:id="@+id/dm_cancel"
		    android:layout_width="100dp"
		    android:layout_height="wrap_content"
		    android:layout_gravity="right"
		    android:text="@string/cancel" />

	</LinearLayout>

</LinearLayout>

